Add reset color functionality